dashboard: fix legend on Firefox, pass 2
Instead of hacking the CSS all over the place,
just get rid of the defaults added by Rickshaw.

--- a/dashboard/src/main/webapp/static/css/arecibo.css
+++ b/dashboard/src/main/webapp/static/css/arecibo.css
@@ -14,9 +14,6 @@
  * under the License.
  */
 
-.row_graph_container {
-}
-
 .chart_container {
     position: relative;
     /* Give some room for the chart title */
@@ -32,16 +29,9 @@
     position: relative;
     float: left;
     clear: right;
-    /* By default, Rickshaw offsets the graph. I'm not sure why, but it's hardcoded.
-       See berthRate parameter in Rickshaw.Graph.Axis.Y */
-    margin-top: -25px;
-    /* Required on Firefox to adjust for the legend */
-    padding-top: 25px;
 }
 
 .display_controls {
-    /* Need to artificially push up the controls because of the berthRate (see above) */
-    margin-top: -45px;
     /* Give some room between the controls and the graph title below */
     margin-bottom: 30px;
     /* Position the controls on top of the Y axis */
@@ -50,8 +40,6 @@
 }
 
 .controls_and_legend {
-    /* Need to artificially push up the row to offset the margin-bottom of the .display_controls element */
-    margin-top: -25px;
     /* When displaying the controls, give some room between the smoothing slider and the title below */
     margin-bottom: 30px;
 }
